k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: execucao-service-deployment
  labels:
    app: execucao-service
    service: execucao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: execucao-service
  template:
    metadata:
      labels:
        app: execucao-service
        service: execucao
      annotations:
        admission.datadoghq.com/enabled: "true"
    spec:
      containers:
        - name: execucao-service
          image: ghcr.io/aka-kensei/oficinafiap-execucao-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet: { path: /health, port: 8080 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /health, port: 8080 }
            initialDelaySeconds: 60
            periodSeconds: 30
