k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: execucao-service
spec:
  selector:
    app: execucao-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30003
  type: NodePort
