k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: execucao-service-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/api/execucao`)
      kind: Rule
      services:
        - name: execucao-service
          port: 80
